--- a/app/src/main/res/layout/fragment_discount.xml
+++ b/app/src/main/res/layout/fragment_discount.xml
@@ -64,6 +64,7 @@
                 android:text="@string/discounts"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_20sdp"
+                android:fontFamily="@font/andika"
                 app:layout_constraintBottom_toBottomOf="@id/image_view_back"
                 app:layout_constraintStart_toEndOf="@id/image_view_back"
                 app:layout_constraintTop_toTopOf="@id/image_view_back" />
