--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,33 +8,37 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
-        android:adjustViewBounds="true"
         android:layout_height="0dp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/image"
         android:scaleType="fitXY"
-        app:shapeAppearance="@style/CornerCut"
-        android:src="@drawable/splash"
+        android:src="@drawable/hang"
         app:layout_constraintHeight_percent="0.67"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearance="@style/CornerCut" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:background="@color/transparent"
+        android:background="@color/transparent2"
         android:contentDescription="@string/image"
-        app:shapeAppearance="@style/CornerCut"
         android:scaleType="fitXY"
         app:layout_constraintHeight_percent="0.67"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearance="@style/CornerCut" />
 
-    <ImageView
+    <TextView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_52sdp"
+        android:layout_marginTop="@dimen/_38sdp"
         android:contentDescription="@string/image"
-        android:src="@drawable/aswaaq_logo"
+        android:fontFamily="@font/andika"
+        android:text="@string/stylista"
+
+        android:textColor="@color/white"
+        android:textSize="@dimen/_38ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +47,7 @@
         android:layout_width="@dimen/_270sdp"
         android:layout_height="@dimen/_200sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_52sdp"
         app:cardCornerRadius="@dimen/_16sdp"
         app:cardElevation="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_48sdp"
+                android:fontFamily="@font/andika"
                 android:paddingVertical="@dimen/_8sdp"
                 android:text="@string/products"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/andika"
                 android:paddingVertical="@dimen/_8sdp"
                 android:text="@string/copuns"
                 app:layout_constraintEnd_toEndOf="parent"
