--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,48 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.presentation.ui.LoginFragment">
 
-    <ImageView
-        android:id="@+id/wave"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_margin="@dimen/_4sdp"
         android:contentDescription="@string/image"
-        android:scaleType="fitXY"
-        android:src="@drawable/wave"
-        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/wave2"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:contentDescription="@string/image"
-        android:scaleType="fitXY"
-        android:src="@drawable/wave3"
-        app:tint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/login" />
 
     <TextView
-        android:id="@+id/signup"
-        android:layout_width="0dp"
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:fontFamily="@font/andika"
         android:text="@string/login"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_24ssp"
+        android:textColor="@color/primary_color"
+        android:textSize="@dimen/_38ssp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/registeration_card"
-        app:layout_constraintEnd_toEndOf="@id/registeration_card"
         app:layout_constraintStart_toStartOf="@id/registeration_card"
-        app:layout_constraintTop_toBottomOf="@id/wave" />
+        app:layout_constraintTop_toBottomOf="@id/animationView" />
+
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/registeration_card"
@@ -50,18 +39,18 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/_8sdp"
         android:layout_marginBottom="@dimen/_48sdp"
-        android:elevation="@dimen/_16sdp"
+        android:fontFamily="@font/andika"
         app:cardCornerRadius="@dimen/_24sdp"
-        app:strokeWidth="@dimen/_1sdp"
-        app:strokeColor="@color/primary_color"
+        app:cardElevation="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.7"
-        app:layout_constraintTop_toBottomOf="@id/signup">
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintTop_toBottomOf="@id/login">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:paddingTop="@dimen/_24sdp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/_24sdp">
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_layout"
@@ -77,7 +66,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:startIconDrawable="@drawable/baseline_email_24"
-                app:startIconTint="@color/navy">
+                app:startIconTint="@color/primary_color">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_ediText"
@@ -99,18 +88,19 @@
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:endIconMode="password_toggle"
-                app:endIconTint="@color/navy"
+                app:endIconTint="@color/primary_color"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/email_layout"
                 app:startIconDrawable="@drawable/baseline_lock_24"
-                app:startIconTint="@color/navy">
+                app:startIconTint="@color/primary_color">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/andika"
                     android:inputType="textPassword"
                     android:textSize="@dimen/_14ssp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -121,12 +111,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/andika"
                 android:paddingHorizontal="@dimen/_16sdp"
+                android:paddingVertical="@dimen/_4sdp"
                 android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_16ssp"
-                android:paddingVertical="@dimen/_4sdp"
-                app:backgroundTint="@color/navy"
+                app:backgroundTint="@color/primary_color"
                 app:cornerRadius="@dimen/_8sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
