--- a/app/src/main/res/layout/item_coupons.xml
+++ b/app/src/main/res/layout/item_coupons.xml
@@ -33,8 +33,10 @@
             android:paddingHorizontal="@dimen/_8sdp"
             android:text="@string/discounts"
             android:layout_marginVertical="@dimen/_8sdp"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
+            android:textStyle="bold"
             android:textSize="@dimen/_14ssp"
+            android:fontFamily="@font/andika"
             app:layout_constraintEnd_toStartOf="@id/image_view_delete_coupons"
             app:layout_constraintStart_toEndOf="@id/coupons_iv"
             app:layout_constraintTop_toTopOf="@id/coupons_iv" />
@@ -46,8 +48,9 @@
             android:paddingHorizontal="@dimen/_8sdp"
             android:text="@string/discounts"
             android:layout_marginVertical="@dimen/_8sdp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14ssp"
+            android:textColor="@color/green_success"
+            android:textSize="@dimen/_12ssp"
+            android:fontFamily="@font/andika"
             app:layout_constraintTop_toBottomOf="@id/text_view_coupons"
             app:layout_constraintStart_toStartOf="@id/text_view_coupons"
             app:layout_constraintEnd_toEndOf="@id/text_view_coupons"
@@ -56,11 +59,11 @@
 
         <ImageView
             android:id="@+id/image_view_delete_coupons"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
             android:layout_margin="@dimen/_8sdp"
             android:contentDescription="@string/image"
-            android:src="@drawable/delete"
+            android:src="@drawable/delete1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
