--- a/app/src/main/res/layout/item_price_rule.xml
+++ b/app/src/main/res/layout/item_price_rule.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/priceRuleLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/_140sdp"
     android:layout_margin="@dimen/_4sdp"
     app:cardCornerRadius="@dimen/_16sdp"
     app:cardElevation="@dimen/_16sdp">
@@ -10,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:paddingVertical="@dimen/_4sdp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/price_rule_iv"
@@ -18,7 +20,6 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_margin="@dimen/_8sdp"
             android:src="@drawable/price"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearance="@style/Circle" />
@@ -27,29 +28,114 @@
             android:id="@+id/text_view_price_rule"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/image_view_delete_price_rule"
-            app:layout_constraintStart_toEndOf="@id/price_rule_iv"
-            app:layout_constraintTop_toTopOf="@id/price_rule_iv"
-            app:layout_constraintBottom_toBottomOf="@id/price_rule_iv"
             android:layout_marginHorizontal="@dimen/_8sdp"
-            android:text="@string/price_rules"
-            android:textSize="@dimen/_14ssp"
-            android:textColor="@color/black"
-            android:paddingHorizontal="@dimen/_8sdp"
+            android:layout_marginVertical="@dimen/_4sdp"
             android:gravity="start"
-            />
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:text="@string/price_rules"
+            android:fontFamily="@font/andika"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/_14ssp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/price_rule_iv"
+            app:layout_constraintTop_toTopOf="@id/price_rule_iv" />
+
+        <TextView
+            android:id="@+id/text_view_price_rule_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:gravity="start"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:text="@string/price_rules"
+            android:textColor="@color/red"
+            android:fontFamily="@font/andika"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintEnd_toEndOf="@id/text_view_price_rule"
+            app:layout_constraintStart_toStartOf="@id/text_view_price_rule"
+            app:layout_constraintTop_toBottomOf="@id/text_view_price_rule" />
+
+        <TextView
+            android:id="@+id/start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:gravity="start"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:text="@string/starts_at"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintStart_toStartOf="@id/text_view_price_rule_value"
+            app:layout_constraintTop_toBottomOf="@id/text_view_price_rule_value" />
+
+        <TextView
+            android:id="@+id/end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:gravity="start"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:text="@string/ends_at"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintBottom_toBottomOf="@id/start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/start"
+            app:layout_constraintTop_toTopOf="@id/start" />
+
+
+        <TextView
+            android:id="@+id/textView_start_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:gravity="start"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:textColor="@color/green_success"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="bold"
+            android:fontFamily="@font/andika"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/start"
+            app:layout_constraintTop_toBottomOf="@id/start"
+            tools:text="@string/starts_at" />
+
+        <TextView
+            android:id="@+id/textView_end_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:gravity="start"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:text="@string/ends_at"
+            android:textColor="@color/green_success"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="bold"
+            android:fontFamily="@font/andika"
+            app:layout_constraintBottom_toBottomOf="@id/textView_start_date"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/textView_start_date"
+            app:layout_constraintTop_toTopOf="@id/textView_start_date" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/_8sdp"
+        app:cardCornerRadius="@dimen/_16sdp"
+        app:cardElevation="@dimen/_16sdp">
 
         <ImageView
             android:id="@+id/image_view_delete_price_rule"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_8sdp"
             android:contentDescription="@string/image"
-            android:src="@drawable/delete"
-            android:layout_margin="@dimen/_8sdp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+            android:src="@drawable/delete1" />
+    </androidx.cardview.widget.CardView>
 
 </androidx.cardview.widget.CardView>
