--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_170sdp"
-    android:layout_margin="@dimen/_2sdp"
-    android:elevation="@dimen/_16sdp"
-    app:cardCornerRadius="@dimen/_12sdp">
+    android:layout_height="@dimen/_180sdp"
+    android:layout_marginHorizontal="@dimen/_2sdp"
+    android:layout_marginVertical="@dimen/_8sdp"
+    app:cardElevation="@dimen/_16sdp"
+    app:cardCornerRadius="@dimen/_16sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,8 +14,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image_view_product"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
             android:layout_margin="@dimen/_8sdp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/image"
@@ -33,6 +33,8 @@
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:maxEms="15"
             android:text="@string/products"
+            android:fontFamily="@font/andika"
+            android:textColor="@color/blue"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
@@ -46,6 +48,7 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/products"
             android:textColor="@color/black"
+            android:fontFamily="@font/andika"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_product_name" />
@@ -58,6 +61,7 @@
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/updated"
+            android:fontFamily="@font/andika"
             android:textColor="@color/black"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
@@ -72,6 +76,7 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/price"
             android:textSize="@dimen/_10ssp"
+            android:fontFamily="@font/andika"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_date" />
 
@@ -84,6 +89,7 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/quantity"
             android:textSize="@dimen/_10ssp"
+            android:fontFamily="@font/andika"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_price" />
 
@@ -96,6 +102,7 @@
             android:layout_marginVertical="@dimen/_8sdp"
             android:background="@drawable/button_background_gradient"
             android:text="@string/product_details"
+            android:fontFamily="@font/andika"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/image_view_delete"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,16 +110,15 @@
 
         <ImageView
             android:id="@+id/image_view_delete"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:src="@drawable/delete"
-            android:contentDescription="@string/image"
-            app:layout_constraintBottom_toBottomOf="@id/btn_details"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/navy"
-            app:layout_constraintStart_toEndOf="@id/btn_details"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginStart="@dimen/_4sdp"
             android:layout_marginEnd="@dimen/_8sdp"
+            android:contentDescription="@string/image"
+            android:src="@drawable/delete1"
+            app:layout_constraintBottom_toBottomOf="@id/btn_details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_details"
             app:layout_constraintTop_toTopOf="@id/btn_details" />
 
 
