--- a/app/src/main/res/layout/item_type_drop_down.xml
+++ b/app/src/main/res/layout/item_type_drop_down.xml
@@ -6,5 +6,6 @@
     android:textSize="14sp"
     android:textColor="@color/black"
     android:padding="8dp"
+    android:fontFamily="@font/andika"
     xmlns:android="http://schemas.android.com/apk/res/android"
     />
