--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="ButtonStyle">
         <item name="android:textSize">@dimen/_16ssp</item>
         <item name="android:textAllCaps">false</item>
@@ -24,6 +25,17 @@
         <item name="cornerFamilyBottomRight">rounded</item>
         <item name="cornerSizeBottomLeft">@dimen/_16sdp</item>
         <item name="cornerSizeBottomRight">@dimen/_16sdp</item>
+    </style>
+
+    <style name="Rounded" parent="">
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSizeBottomLeft">@dimen/_16sdp</item>
+        <item name="cornerSizeBottomRight">@dimen/_16sdp</item>
+        <item name="cornerFamilyTopLeft">rounded</item>
+        <item name="cornerFamilyTopRight">rounded</item>
+        <item name="cornerSizeTopLeft">@dimen/_16sdp</item>
+        <item name="cornerSizeTopRight">@dimen/_16sdp</item>
     </style>
 
     <style name="Circle" parent="">
@@ -51,5 +63,6 @@
         <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    
+
+
 </resources>
